<resources>

    <string name="app_name">Flaginator</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_flaginator">Flaginator</string>
    <string name="button_start">Start quiz</string>
    <string name="button_settings">Game mode</string>
    <string name="button_about">About</string>
    <string name="button_score">High score</string>
    <string name="button_exit">Exit</string>
    <string name="button_save">Save</string>
    <string name="button_set_default">Reset</string>
    <string name="title_activity_about">About</string>
    <string name="createdBy">Created by Andrej Sitár (2012)</string>
    <string name="providedBy">"Flags provided by <b>www.nordicfactory.com</b>"</string>
    <string name="Guess_Capital">Guess Capital</string>
    <string name="Guess_Flag">Guess Flag</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="title_activity_start_capital">Flaginator (Capital mode)</string>
    <string name="title_activity_start_flag">Flaginator (Flag mode)</string>
    <string name="next">>></string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="europe_label">Europe</string>
    <string name="asia_label">Asia</string>
    <string name="africa_label">Africa</string>
    <string name="americas_label">Americas and Caribbean</string>
    <string name="choose_continent_label">Choose continent</string>
    <string name="number_label">"1."</string>
    <string name="flag">"Flag"</string>
    <string name="slovakia">"Slovakia"</string>
    <string name="title_activity_chart">Chart</string>
    <string name="next_content">Next</string>
    <string name="timer">Timer</string>

</resources>